# harbly

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  README.md  TECH_STACK.md  eslint.config.mjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  rustfmt.toml
.github/workflows/: ci.yml
apps/desktop/: dev-hdoc.html  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: generate-notices.mjs  prepare-sidecar.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/assets/hdoc/: runtime.css  runtime.js
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  commands.rs  hdoc_template.rs  i18n.rs  lib.rs  main.rs  md_template.rs  menu.rs  pasteboard.rs  protocol.rs  state.rs  thumbs.rs  trash_util.rs
apps/desktop/src/components/: AiPanel.tsx  AssetGrid.tsx  CommandPalette.tsx  DragGhost.tsx  FindBar.tsx  HdocEditor.tsx  MarkdownEditor.tsx  Modals.tsx  Onboarding.tsx  RenameInput.tsx  Sidebar.tsx  TitleBar.tsx  Viewer.tsx  menu.tsx
apps/desktop/src/dev/: hdocHarness.tsx
apps/desktop/src/hdoc/: draghandle.ts  image.test.ts  image.ts  items.test.ts  items.ts  nodeviews.ts  parse.ts  plugins.ts  roundtrip.test.ts  schema.ts  serialize.ts  slash.ts
apps/desktop/src/lib/: api.ts  drag.ts  i18n.ts  ime.ts  mdpaste.test.ts  mdpaste.ts  pmFind.test.ts  pmFind.ts  store.ts  theme.ts  types.ts
apps/landing/: astro.config.mjs  package.json
apps/landing/public/: robots.txt
apps/landing/src/i18n/: en.ts  es.ts  index.ts  ja.ts  ko.ts  zh-cn.ts  zh-tw.ts
apps/landing/src/layouts/: Landing.astro
apps/landing/src/pages/: 404.astro
apps/landing/src/pages/[lang]/: index.astro
crates/harbly-ai/: Cargo.toml
crates/harbly-ai/examples/: agent_smoke.rs
crates/harbly-ai/src/: agent.rs  byok.rs  lib.rs  sse.rs  tools.rs
crates/harbly-core/: Cargo.toml
crates/harbly-core/src/: ai_meta.rs  db.rs  error.rs  extract.rs  hdoc.rs  lib.rs  markdown.rs  ops.rs  scan.rs  tags_xattr.rs  types.rs  watch.rs
crates/harbly-core/tests/: core.rs
crates/harbly-mcp/: Cargo.toml
crates/harbly-mcp/examples/: claude_mcp_smoke.rs
crates/harbly-mcp/src/: main.rs
crates/harbly-mcp/tests/: stdio.rs
