[package]
name = "harbly-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "sync",
    "time",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
