[package]
name = "harbly-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
blake3 = "1"
jieba-rs = "0.7"
scraper = "0.20"
ego-tree = "0.6"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
percent-encoding = "2"
notify = "7"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
xattr = "1"
plist = "1"

[dev-dependencies]
tempfile = "3"
